/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "sonardyne/api/common/timestamp.proto";

package sonardyne.api.common.telegrams;

// GgaTelegram represents a GNSS-derived position fix at a specific time.
// Includes latitude, longitude, altitude, geoid separation, and fix quality metrics.
message GgaTelegram {
  // GgaTelegram.FixQuality indicates the quality, accuracy, or reliability of data in the GgaTelegram
  // based on the type of technique or signal used to derive the location.
  enum FixQuality {
    FIX_QUALITY_UNSPECIFIED                           = 0;  // Unspecified fix quality.
    FIX_QUALITY_FIX_NOT_VALID                         = 1;  // Fix not valid.
    FIX_QUALITY_GNSS_FIX                              = 2;  // Standard GNSS fix.
    FIX_QUALITY_DIFFERENTIAL_GNSS_FIX                 = 3;  // Differential GNSS fix.
    FIX_QUALITY_NOT_APPLICABLE                        = 4;  // Fix quality not applicable.
    FIX_QUALITY_RTK_FIXED                             = 5;  // RTK fixed solution.
    FIX_QUALITY_RTK_FLOAT                             = 6;  // RTK float solution.
    FIX_QUALITY_INS_DEAD_RECKONING                    = 7;  // INS dead reckoning solution.
  };

  sonardyne.api.common.Timestamp time_of_validity     = 1;  // Timestamp when the GNSS data is valid.
  double latitude_radians                             = 2;  // Latitude in radians.
  double longitude_radians                            = 3;  // Longitude in radians.
  double altitude_metres                              = 4;  // Altitude above mean sea level in metres.
  double geoid_separation_metres                      = 5;  // Geoid separation in metres.
  double hdop                                         = 6;  // Horizontal dilution of precision.
  double age_seconds                                  = 7;  // Age of differential correction in seconds.
  uint32 number_of_satellites                         = 8;  // Number of satellites used in the solution.
  uint32 reference_station_id                         = 9;  // ID of the reference station for differential corrections.
  FixQuality fix_quality                              = 10;  // Quality of the GGA data.
}
